src/test/ui/traits/negative-impls/pin-unsound-issue-66544-clone.stderr
error[E0119]: conflicting implementations of trait `std::clone::Clone` for type `&mut MyType<'_>`:
  --> $DIR/pin-unsound-issue-66544-clone.rs:7:1
   |
LL | impl<'a> Clone for &'a mut MyType<'a> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T> std::clone::Clone for &mut T
             where T: ?Sized;

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
